Commit for assignment

--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,8 @@
                         Temporibus vero et reprehenderit doloremque nesciunt atque beatae modi saepe, aliquid neque, animi aperiam laudantium sapiente qui quasi. Quasi molestias qui in ullam facere recusandae dignissimos error aspernatur tempore veniam?
                         Commodi corrupti in voluptatem veniam quae rem, beatae assumenda libero recusandae, cupiditate natus ut expedita dolore sed omnis nobis adipisci? Libero quasi, dolor atque provident cumque fuga blanditiis. Explicabo, eos?
                         Ratione, provident similique nesciunt hic itaque molestias, praesentium amet, nemo eaque exercitationem eum velit eveniet saepe consectetur repellendus corrupti ad eius laudantium obcaecati facere. Voluptates hic nihil odit inventore labore.
-                        Maiores numquam cum distinctio id eveniet autem illo asperiores, voluptatem facere repellat beatae reprehenderit deserunt veritatis. Consequuntur modi, omnis eaque veniam nemo, maxime delectus quasi neque exercitationem dolorum reprehenderit mollitia!</p>
+                        Maiores numquam cum distinctio id eveniet autem illo asperiores, voluptatem facere repellat beatae reprehenderit deserunt veritatis. Consequuntur modi, omnis eaque veniam nemo, maxime delectus quasi neque exercitationem dolorum reprehenderit mollitia! some more context
+                    </p>
                         <!-- <img src="Images/image01.jpg" alt=""> -->
                     </li>
                     <li class="splide__slide Slide-2">
